--- a/kfs1/src/kernel/.cargo/config.toml
+++ b/kfs1/src/kernel/.cargo/config.toml
@@ -5,3 +5,11 @@ target = "i386-unknown-none.json"
 [unstable]
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
+
+[target.i386-unknown-none]
+rustflags = [
+    "-C", "link-arg=-nostdlib",
+    "-C", "link-arg=-static",
+    "-C", "relocation-model=static",
+    "-C", "code-model=kernel",
+]
