--- a/kfs1/src/kernel/Cargo.toml
+++ b/kfs1/src/kernel/Cargo.toml
@@ -19,6 +19,7 @@ codegen-units = 1
 
 [dependencies]
 volatile = "0.2.6"
+spin = "0.10.0" # spinning mutex : dont block, instead try to lock it again and again taht buring cpu time
 
 [dependencies.lazy_static]
 version = "1.0"
