--- a/kfs1/Makefile
+++ b/kfs1/Makefile
@@ -1,49 +1,15 @@
-AS = nasm
-CARGO = cargo
-LD = ld
 
-ASFLAGS = -f elf32
-LDFLAGS = -m elf_i386 -T src/linker.ld
+.PHONY: all clean run test
 
-KERNEL_DIR = src/kernel
-TARGET_DIR = $(KERNEL_DIR)/target/i386-unknown-none/release
-RUST_LIB = $(TARGET_DIR)/libkernel.a
+all: run
 
-KERNEL = kernel.bin
-ISO = myos.iso
-
-.PHONY: all clean run rust-kernel
-
-all: $(ISO)
-
-# Compile boot.asm
-boot.o: src/boot.asm
-	$(AS) $(ASFLAGS) src/boot.asm -o boot.o
-
-# Build Rust kernel
-rust-kernel:
-	cd $(KERNEL_DIR) && $(CARGO) build --release #--target i386-unknown-none.json -Z build-std=core # plus besoins car defini dans config toml
-
-# Link everything
-$(KERNEL): boot.o rust-kernel
-	$(LD) $(LDFLAGS) boot.o $(RUST_LIB) -o $(KERNEL)
-
-# Create bootable ISO
-$(ISO): $(KERNEL)
-	mkdir -p isodir/boot/grub
-	cp $(KERNEL) isodir/boot/
-	cp boot/grub/grub.cfg isodir/boot/grub/
-	grub-mkrescue -o $(ISO) isodir
-
-# Run with QEMU
-run: $(ISO)
-	qemu-system-i386 -cdrom $(ISO)
-
-test:
-	cd src/kernel && cargo build && cargo test
+run: 
+	cd src/kernel && cargo run
+test: 
+	cd src/kernel && cargo test
 
 # Clean build artifacts
 clean:
-	rm -f boot.o $(KERNEL) $(ISO)
+	rm -f src/kernel/boot.o kernel.bin  src/kernel/kernel.iso src/kernel/kiki_final src/kernel/iso/boot/grub/grub.cfg src/kernel/iso/boot/kiki
 	rm -rf isodir
-	cd $(KERNEL_DIR) && cargo clean
+	cd src/kernel && cargo clean
