--- a/kfs1/src/kernel/.cargo/config.toml
+++ b/kfs1/src/kernel/.cargo/config.toml
@@ -6,7 +6,15 @@ target = "i386-unknown-none.json"
 build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
+
+[target.x86]
+runner = "scripts/qemu.sh"
+
+[target.x86_64]
+runner = "scripts/qemu.sh"
+
 [target.i386-unknown-none]
+runner = "scripts/qemu.sh"
 rustflags = [
     "-C", "link-arg=-nostdlib",
     "-C", "link-arg=-static",
