--- a/kfs1/src/kernel/grub.cfg
+++ b/kfs1/src/kernel/grub.cfg
@@ -2,6 +2,6 @@ set timeout=0
 set default=0
 
 menuentry "My Custom Kernel" {
-    multiboot /boot/kernel.bin
+    multiboot /boot/kiki
     boot
 }
