--- a/kfs1/Makefile
+++ b/kfs1/Makefile
@@ -10,6 +10,6 @@ test:
 
 # Clean build artifacts
 clean:
-	rm -f src/kernel/boot.o kernel.bin  src/kernel/kernel.iso src/kernel/kiki_final src/kernel/iso/boot/grub/grub.cfg src/kernel/iso/boot/kiki
+	rm -f src/kernel/boot.o src/kernel/kernel.iso src/kernel/iso/boot/grub/grub.cfg src/kernel/iso/boot/kiki
 	rm -rf isodir
 	cd src/kernel && cargo clean
