--- a/kfs1/src/kernel/Cargo.toml
+++ b/kfs1/src/kernel/Cargo.toml
@@ -3,10 +3,13 @@ name = "kernel"
 version = "0.1.0"
 edition = "2021"
 
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kfs_test)'] } # dit a cargo quon autorise ce flag
+
 [lib]
 name = "kernel"
 path = "src/kernel.rs"
-crate-type = ["staticlib", "rlib"] 
+crate-type = ["staticlib", "rlib"]
 # test = true
 
 [[bin]]
@@ -18,6 +21,9 @@ bench = false
 [profile.dev]
 # panic = "abort"
 lto = true
+
+[profile.test]
+inherits = "dev"
 
 [profile.release]
 # panic = "abort"
