Refacto: Arrange files and folders

--- a/kfs1/Makefile
+++ b/kfs1/Makefile
@@ -5,10 +5,10 @@ export ARCH ?= i386
 all: run
 
 run:
-	cd src/kernel && cargo clean && cargo run
+	cd src/kernel && cargo run
 
 test:
-	cd src/kernel && cargo clean && RUSTFLAGS="--cfg kfs_test" cargo run
+	cd src/kernel && RUSTFLAGS="--cfg kfs_test" cargo run
 
 clean:
 	rm -f src/kernel/boot.o src/kernel/kernel.iso src/kernel/iso/boot/grub/grub.cfg src/kernel/iso/boot/kiki
